--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,8 +1,30 @@
 /* Mobile */
-@media (max-height: 648px) {
-  section.regalos {
-    height: 65vh;
-  }
+@media (max-height: 756px) {
+      section.regalos {
+        height: 65vh;
+      }
+
+      section.portada .content-portada h2 {
+        font-size: 26px;
+        top: 6rem;
+      }
+
+      section.portada .content-portada h1 {
+        font-size: 100px;
+        top: 10rem;
+      }
+      
+      section.portada .content-portada span.fecha {
+        font-size: 26px;
+        top: 14rem;
+      }
+
+      /* texto portada */
+      section.portada .box-frase-portada p {
+        font-size: 15px;
+        top: 18rem;
+      }
+
   }
 
 
