--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@ section.portada .content-portada h2 {
   font-size: 30px;
 
   position: absolute;
-  top: 8rem;
+  top: 6rem;
   left: 50%;
   transform: translate(-50%, -50%);
 
@@ -84,7 +84,7 @@ section.portada .content-portada h1 {
   font-size: 110px;
 
   position: absolute;
-  top: 13rem;
+  top: 10rem;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -99,7 +99,7 @@ section.portada .content-portada span.fecha {
   font-size: 30px;
 
   position: absolute;
-  top: 18rem;
+  top: 14rem;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -116,23 +116,11 @@ section.portada .box-frase-portada p {
   font-size: 18px;
 
   position: absolute;
-  top: 22rem;
+  top: 18rem;
   left: 50%;
   transform: translate(-50%, -50%);
 
 }
-
-/* section.portada .box-nombres-fecha-portada h1 span {
-  font-family: var(--fuente-5);
-  font-weight: var(--weight-font-regular);
-  background-color: var(--color-2);
-  color: var(--color-5);
-  display: inline-block;
-  border-radius: 50%;
-  width: 60px;
-  height: 60px;
-  font-size: 40px;
-} */
 
 /* mariposa de portada */
 /* section.portada .box-nombres-fecha-portada img {
@@ -142,10 +130,11 @@ section.portada .box-frase-portada p {
 
 
 
-section.portada .flecha-continuar {
-  width: 50px;
+.flecha {
   position: absolute;
-  bottom: -80px;
+  top: 35rem;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 /* -------  Reloj Contador  -------- */
