--- a/css/main.css
+++ b/css/main.css
@@ -5,10 +5,10 @@
 }
 
 #body {
-  width: calc(100vw - (100vw - 100%));
+   width: calc(100vw - (100vw - 100%));
 }
 
-:root {
+:root { 
   /* Colores */
   --color-1: #575756;
   --color-2: #b5976b;
@@ -25,7 +25,8 @@
   --fuente-5: "Playfair Display", serif;
   --fuente-6: "Open Sans", sans-serif;
   --fuente-7: "Dancing Scfont-familyript", Sans-serif;
-
+  --fuente-8: 'Arizonia', cursive;
+  
   /* Grosor de fuente */
   --weight-font-regular: 400;
   --weight-font-medium: 500;
@@ -44,17 +45,11 @@ section.portada {
   text-align: center;
   width: 100vw;
   height: 100vh;
-  padding-top: 90px;
+  /* padding-top: 90px; */
   position: relative;
   align-content: center;
   align-items: center;
-  
-  display: flex;
-  text-align: center;
-  justify-content:center;
-  vertical-align: text-top;  
-  /* background-color: #7bff00; */
-}
+  }
 
 /* mis 15 */
 section.portada .content-portada h2 {
@@ -63,25 +58,23 @@ section.portada .content-portada h2 {
   color: var(--color-5);
   width: 100%;
   text-align: center;
-  font-size: 30px;
+  font-size: 28px;
 
   position: absolute;
-  top: 6rem;
+  top: 5.5rem;
   left: 50%;
   transform: translate(-50%, -50%);
-
-  
 
 }
 
 /* Carme */
 section.portada .content-portada h1 {
+  font-family: var(--fuente-8);
   color: var(--color-5);
-  font-family: "Dancing Script", Sans-serif;
-  font-weight: var(--weight-font-bolt900);
+  font-weight: var(--weight-font-medium);
   width: 100%;
   text-align: center;
-  font-size: 110px;
+  font-size: 100px;
 
   position: absolute;
   top: 10rem;
@@ -132,7 +125,7 @@ section.portada .box-frase-portada p {
 
 .flecha {
   position: absolute;
-  top: 35rem;
+  top: 39rem;
   left: 50%;
   transform: translate(-50%, -50%);
 }
