Se modifica hashtag

--- a/css/main.css
+++ b/css/main.css
@@ -290,7 +290,7 @@ section.instagram {
   bottom: 0;
   margin: auto;
 
-  color: #7bff00;
+  color: #ffffff;
   font-family: "Dancing Scfont-familyript", Sans-serif;
   font-size: 18px;
   font-weight: 100;
